@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1826 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1827 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -247,3 +247,5 @@ Changes from NetBSD 6.0 to NetBSD 7.0:
 	wm(4): Add support for I217 and I218 [msaitoh 20130602]
 	X11: Updated all Xorg packages that could be, for Xorg SA 2003-05-23,
 		and general.  [mrg 20130605]
+	kernel: Add driver soekrisgpio for Soekris net6501 
+		Ported by kardel@ from a patch for OpenBSD. [kardel 20130609]
